using System.Collections;
using System.Collections.Generic;
using UnityEngine;

internal class AnimationsString
{
    internal static string isIdle = "isIdle";
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jumpTrigger = "Jump";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string attackTrigger = "Attack";
    internal static string canMove = "canMove";
    internal static string hasTarget = "hasTarget";
    internal static string isAlive = "isAlive";
    internal static string hitTrigger = "hitTrigger";
    internal static string lockVelocity = "lockVelocity";
    internal static string attackCooldown = "attackCooldown";
    internal static string healTrigger = "healTrigger";
    internal static string airAttackTrigger = "AirAttack";
    internal static string plungeTrigger = "PlungeAttack";
    internal static string rollTrigger = "rollTrigger";
    internal static string isCast = "isCast";
    internal static string castTrigger_1 = "castTrigger_1";
    internal static string castTrigger_2 = "castTrigger_2";
    internal static string castTrigger_3 = "castTrigger_3";
}
